SERVER-71862 Return index build result from duplicate `createIndexes`